--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,6 +34,9 @@
 	input:focus{outline: none;}
 	button{width: 25%; background: lightblue; border: 1px solid gold; text-align: center; padding: 3px; 
 			font-size: 18px; color: white; border-radius: 3px; letter-spacing: 1.5px;}
+	.quotes{margin: 30px auto;}
+	.quote{margin-bottom: 10px;}
+	.quote-author{text-decoration: underline; padding-bottom: 5px; font-weight: bold; font-size: 20px;}
 </style>
 <body>
 	<div class="container martop100">
@@ -43,6 +46,19 @@
 			<input type="text" placeholder="quote" name="quote">
 			<button type="submit">Submit</button>
 		</form>
+		  <ul class="quotes">
+		  <% for(var i=0; i<quotes.length; i++) {%>
+		    <li class="quote">
+		      <span class="quote-author"><%= quotes[i].name %></span><br>
+		      <span class="actual-quote"><%= quotes[i].quote %></span>
+		    </li>
+		  <% } %>
+		  </ul>
+		  <div class="update-div">
+		  	<h2>Replace that last quote</h2>
+		  	<button id="update-button">REPLACE</button>
+		  </div>
 	</div>
+	<script src="main.js"></script>
 </body>
 </html>
